HW13. refactoring. bugfix
