# hw12_13_14_15_calendar/docs/swagger.json
@@ -441,7 +441,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internalhttp.Response"
+                            "$ref": "#/definitions/internalhttp.NotificationListResponseWrapper"
                         }
                     },
                     "400": {
@@ -477,7 +477,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internalhttp.notificationRequest"
+                            "$ref": "#/definitions/dto.NotificationData"
                         }
                     }
                 ],
@@ -529,7 +529,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internalhttp.Response"
+                            "$ref": "#/definitions/internalhttp.NotificationResponseWrapper"
                         }
                     },
                     "400": {
@@ -572,7 +572,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internalhttp.notificationRequest"
+                            "$ref": "#/definitions/dto.NotificationData"
                         }
                     }
                 ],
@@ -662,6 +662,29 @@
                 }
             }
         },
+        "dto.NotificationData": {
+            "type": "object",
+            "properties": {
+                "eventID": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "sent": {
+                    "type": "boolean"
+                },
+                "time": {
+                    "type": "string"
+                },
+                "userID": {
+                    "type": "string"
+                }
+            }
+        },
         "internalhttp.ErrorResponseWrapper": {
             "type": "object",
             "properties": {
@@ -722,6 +745,49 @@
                 }
             }
         },
+        "internalhttp.NotificationListResponseWrapper": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.NotificationData"
+                    }
+                },
+                "errors": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "requestId": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "integer"
+                }
+            }
+        },
+        "internalhttp.NotificationResponseWrapper": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/dto.NotificationData"
+                },
+                "errors": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "requestId": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "integer"
+                }
+            }
+        },
         "internalhttp.Response": {
             "type": "object",
             "properties": {
@@ -737,23 +803,6 @@
                 },
                 "status": {
                     "type": "integer"
-                }
-            }
-        },
-        "internalhttp.notificationRequest": {
-            "type": "object",
-            "properties": {
-                "event_id": {
-                    "type": "string"
-                },
-                "message": {
-                    "type": "string"
-                },
-                "time": {
-                    "type": "string"
-                },
-                "user_id": {
-                    "type": "string"
                 }
             }
         }
